<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="?android:attr/windowBackground">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_selecciona"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#333333"
        android:layout_marginBottom="16dp" />

    <RadioGroup
        android:id="@+id/radioGroupComida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/opcPizza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_pizza"
            android:padding="8dp" />

        <RadioButton
            android:id="@+id/opcHamburguesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_Hamburgesa"
            android:padding="8dp" />

        <RadioButton
            android:id="@+id/opcFrejoles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_frejoles"
            android:padding="8dp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSiguienteComida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_Confirmar"
        android:layout_marginTop="32dp"
        android:enabled="false"
        android:backgroundTint="@color/purple_500"
        android:textColor="#FFFFFF" />

</LinearLayout>
